# devto-articles

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
blogs/awk/: awk.json  awk.md
blogs/cd/: cd.json  cd.md
blogs/comprehensive_guide/: comprehensive_guide.json  comprehensive_guide.md
blogs/cut/: cut.json  cut.md
blogs/df/: df.json  df.md
blogs/knapsack/: knapsack.json  knapsack.md
blogs/ps/: ps.json  ps.md
blogs/rsync/: rsync.json  rsync.md
blogs/ssh/: ssh.json  ssh.md
blogs/top_python_repos_wk9/: top_python_repos_wk9.json  top_python_repos_wk9.md
script/: article-template.json  publish.py
