[tool.poetry]
name = "devto-articles"
version = "0.1.0"
description = "Repository where I publish my articles to DEV.to with the help of CI/CD"
license = "MIT"
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
maintainers = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
homepage = "https://dev.to/k1lgor"
repository = "https://github.com/k1lgor/devto-articles"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
packages = [{include = "devto_articles"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-frontmatter = "^1.0.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
